<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="28dp"
    android:background="@color/primary"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        app:startIconDrawable="@drawable/baseline_email_outline_24"
        app:startIconTint="@color/white"
        android:textColorHint="@color/white"
        app:endIconTint="@color/tetriary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/baseline_lock_outline_24"
        app:startIconTint="@color/white"
        android:hint="Password"
        android:layout_marginTop="16dp"
        app:endIconMode="password_toggle"
        android:textColorHint="@color/white"
        app:endIconTint="@color/tetriary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textColor="@color/secondary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_gravity="end"
        android:layout_alignParentEnd="true"
        android:gravity="end" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/email_login_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/secondary"
        android:layout_marginTop="18dp"
        android:textSize="18sp"
        android:text="Login"
        app:cornerRadius="32dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/tetriary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Or"
            android:textColor="@color/tetriary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingHorizontal="10dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/tetriary" />
    </LinearLayout>

    <ImageView
        android:id="@+id/google_btn"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        android:contentDescription="Google login button"
        android:src="@drawable/google_login_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/navigate_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Register now"
            android:textColor="@color/secondary"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
